# rats-ticket-service

./: .gitignore  Cargo.toml  README.md  Rocket.toml  install.sh  rats.service
migrations/2020-09-19-193959_create_accounts/: up.sql
migrations/2020-12-26-165553_create_tickets/: up.sql
src/: main.rs  models.rs  schema.rs  ticket.rs  user.rs
static/css/: aaa.css  createstyle.css  indexstyle.css  login.css  signup.css
static/js/: create_ticket.js
templates/: create_ticket.html.hbs  index.html.hbs  login.html.hbs  signup.html.hbs
