[package]
name = "ticket_service"
version = "0.1.0"
authors = ["Peter Heringer <peter.heringer@gmx.de>"]
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rocket = { version = "0.4.5", features = ["private-cookies"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"
dotenv = "0.15.0"
lettre = "0.10.0-alpha.2"
rocket-multipart-form-data = "0.9.6"
chrono = "0.4"
rand = { version = "0.8.0", features = ["getrandom"] }
hyperx = "1.2.0"
argon2 = "0.1"
rand_core = { version = "0.6", features = ["std"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "diesel_sqlite_pool", "serve"]
